--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section id="resume">
         <div class="resume-content">
             <h2>Resume</h2>
-            <p>Download my resume <a href="SHIBAM MOHANTY (1) (2).pdf" download>here</a>.</p>
+            <p>Download my resume <a href="Shibam Mohanty Resume .pdf" download>here</a>.</p>
         </div>
     </section>
 
